--- a/FrontEndWebNgheNhac/style.css
+++ b/FrontEndWebNgheNhac/style.css
@@ -5,8 +5,8 @@
     }
 
     header .song_side .popular_song .pop_song li .img_play {
-        width: 100px;
-        height: 100px;
+        width: 100px !important;
+        height: 100px !important;
     }
 
     header .song_side .popular_song .pop_song li {
